Fix some dark mode styles

--- a/src/components/WelcomeForm/WelcomeForm.scss
+++ b/src/components/WelcomeForm/WelcomeForm.scss
@@ -1,55 +1,61 @@
+.box {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+}
 
-        .box {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            -webkit-box-align: center;
-            align-items: center;
-        }
+.register {
+  padding: 48px;
+  color: rgb(30, 32, 34);
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  overflow: hidden;
+  border-radius: 8px;
+  width: 100%;
 
-        .register {
-            padding: 48px;
-            color: rgb(30, 32, 34);
-            transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-            overflow: hidden;
-            border-radius: 8px;
-            width: 100%;
-        
-            &.__light {
-                background-color: rgb(255, 255, 255);
-            }
-    
-            &.__dark {
-                background-color: rgb(148, 145, 145);
-            }
-        }
+  &.__light {
+    background-color: rgb(255, 255, 255);
+  }
 
-        .form {
-            display: flex;
-            flex-direction: column;
-        }
+  &.__dark {
+    background-color: rgb(148, 145, 145);
+  }
+}
 
-        .field {
-            margin-bottom: 32px;
-        }
+.form {
+  display: flex;
+  flex-direction: column;
+}
 
-        .divider {
-            margin-left: -48px;
-            margin-right: -48px;
-            margin-top: 32px;
-            margin-bottom: 32px;
-        }
+.field {
+  margin-bottom: 32px;
+}
 
-        .info-register {
-            margin: 0px;
-            font-family: Inter, sans-serif;
-            font-weight: 400;
-            font-size: 0.875rem;
-            line-height: 1.43;
-            text-align: left;
-        }
+.divider {
+  margin-left: -48px;
+  margin-right: -48px;
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
 
-        .link {
-            color: rgb(30, 32, 34);
-            font-weight: 700;
-        }
+.info-register {
+  margin: 0px;
+  font-family: Inter, sans-serif;
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 1.43;
+  text-align: left;
+
+  &.__light {
+    color: black;
+  }
+
+  &.__dark {
+    color: white;
+  }
+
+  .link {
+    font-weight: 900;
+  }
+}
