--- a/src/components/WelcomeText/WelcomeText.scss
+++ b/src/components/WelcomeText/WelcomeText.scss
@@ -1,29 +1,43 @@
 .item {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
 }
 
 .text {
-    margin-bottom: 32px;
+  margin-bottom: 32px;
 }
 
 .title {
-    font-size: 2.9991rem;
-    margin: 0px 0px 0.35em;
-    font-family: Inter, sans-serif;
-    line-height: 1.167;
+  font-size: 2.9991rem;
+  margin: 0px 0px 0.35em;
+  font-family: Inter, sans-serif;
+  line-height: 1.167;
+  font-weight: 900;
+
+  &.__light {
     color: black;
-    font-weight: 900;
+  }
+
+  &.__dark {
+    color: white;
+  }
 }
 
 .info {
-    font-size: 1.25rem;
-    margin: 0px;
-    font-family: Inter, sans-serif;
-    line-height: 1.6;
+  font-size: 1.25rem;
+  margin: 0px;
+  font-family: Inter, sans-serif;
+  line-height: 1.6;
+  font-weight: 500;
+
+  &.__light {
     color: black;
-    font-weight: 500;
+  }
+
+  &.__dark {
+    color: white;
+  }
 }
